new ec2 vpc template.yml
Metadata:
 AWS::Cloudformation::Interface:
  parameterGroups:
    - 
     Label:
      Default: "VPC"
     Parameters:
       - VPC
    -
     Label: 
      Default: "Subnet"
     Parameters: 
      - PublicSubnet
      - PrivateSubnet

Parameters:
 NumberofAZs:
  Type: Number 
  AllowedValues:
  - 0
  - 1
  - 2
  Default: 1
 VPC:
  Default: 10.0.0.0/16
  Description: Enter VPC CidrBlock
  Type: String
 PublicSubnet:
  Default: 10.0.1.0/24
  Description: Enter Public Subnet CidrBlock
  Type: String
 PrivateSubnet:
  Default: 10.0.2.0/24
  Description: Enter Private Subnet CidrBlock
  Type: String
 InstanceType:
  Default: t2.micro
  Description: Enter Instance Type
  Type: String
 KeyName:
  Description: EC2 Key Pair for SSH Access
  Type: AWS::EC2::KeyPair::KeyName
 ImageId:
  Description: Imageid
  Type: String
  Default: ami-01a4f99c4ac11b03c   
 EnvMap:
  Type: String
  AllowedValues:
    - Public
    - Private
  ConstraintDescription: must specify Public or Private
Mappings:
  Environment:
    Public:
      DependsOn: PublicSubnet1
      SubnetId: !Ref PublicSubnet1
      Name: "Public"
    Private: 
      DependsOn: PrivateSubnet1 
      SubnetId: !Ref PrivateSubnet1
      Name: "Private"


Resources:
     
      PubPrivateVPC:
        Type: AWS::EC2::VPC
        Properties:
          CidrBlock: !Ref VPC
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-VPC

          
      PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref PubPrivateVPC
          AvailabilityZone: !Select [ 0, !GetAZs ]
          CidrBlock: !Ref PublicSubnet 
          MapPublicIpOnLaunch: true
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-Publicsubnet1   
      
     
      PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref PubPrivateVPC
          AvailabilityZone: !Select [ 1, !GetAZs ]
          CidrBlock: !Ref PrivateSubnet
          MapPublicIpOnLaunch: false
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-Privatesubnet1
     
      InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-InternetGateway 
      
      GatewayToInternet:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
          VpcId: !Ref PubPrivateVPC
          InternetGatewayId: !Ref InternetGateway
      
      
      PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref PubPrivateVPC
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-PublicRouteTable
      
      PublicRoute:
        Type: AWS::EC2::Route
        DependsOn: GatewayToInternet
        Properties:
          RouteTableId: !Ref PublicRouteTable
          DestinationCidrBlock: 0.0.0.0/0
          GatewayId: !Ref InternetGateway
     
      PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref PublicSubnet1
          RouteTableId: !Ref PublicRouteTable
     
      NatGateway:
        Type: AWS::EC2::NatGateway
        DependsOn: NatPublicIP
        Properties: 
          SubnetId: !Ref PublicSubnet1
          AllocationId: !GetAtt NatPublicIP.AllocationId
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-NatGateway

      
      NatPublicIP:
        Type: AWS::EC2::EIP
        DependsOn: PubPrivateVPC
        Properties:
          Domain: vpc
     
      
      PrivateRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
          VpcId: !Ref PubPrivateVPC
          Tags:
            - Key: Name
              Value: !Sub ${AWS::StackName}-PrivateRouteTable
      
      PrivateRoute:
        Type: AWS::EC2::Route
        Properties:
          NatGatewayId: !Ref NatGateway
          RouteTableId: !Ref PrivateRouteTable
          DestinationCidrBlock: 0.0.0.0/0
     
      PrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
          SubnetId: !Ref PrivateSubnet1
          RouteTableId: !Ref PrivateRouteTable

      bharathSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          VpcId: !Ref PubPrivateVPC 
          GroupDescription: Enable HTTP from 0.0.0.0/0
          SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: '80'
                  ToPort: '80'
                  CidrIp: 0.0.0.0/0
      
      sshsecuritygroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
          GroupDescription: SSH Enable
          SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: '22'
                  ToPort: '22'
                  CidrIp: 0.0.0.0/0
          VpcId: !Ref PubPrivateVPC 

      EC2Instance:
        Type: AWS::EC2::Instance
        
        Properties:
          ImageId: !Ref ImageId
          InstanceType: !Ref InstanceType
          SubnetId: !FindInMap
                - Environment
                - !Ref EnvMap 
                - SubnetId 
          SecurityGroupIds: 
                 - !Ref bharathSecurityGroup
                 - !Ref sshsecuritygroup           
          KeyName: !Ref KeyName
          Tags:
             - Key: Name
               Value: bharathEC2

      

Outputs:
 VPC:
  Description: Application VPC
  Value: !Ref PubPrivateVPC
  Export:
   Name: !Sub ${AWS::StackName}-vpc

 PublicSubnet1:
  Description: PublicSubnet1
  Value: !Ref PublicSubnet1
  Export: 
   Name: !Sub ${AWS::StackName}-publicsubnet

 PrivateSubnet1:
  Description: PrivateSubnet1
  Value: !Ref PrivateSubnet1
  Export:
   Name: !Sub ${AWS::StackName}-privatesubnet
 
 EC2Instance:
  Description: EC2 AMI
  Value: !Ref ImageId
  Export:
   Name: !Sub ${AWS::StackName}-EC2AMI
